--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -12,4 +12,6 @@
   <h3><%= art.title %></h3>
   <p><%= art.text %></p>
   <%= link_to 'Show', article_path(art) %>
+  <%= link_to 'Edit', edit_article_path(art) %>
+  <%= link_to 'Destroy', article_path(art), method: :delete, data: { confirm: 'Are you sure?' } %>
 <% end %>
