--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,4 +6,39 @@
 <h3>Content</h3>
 <p><%= @article.text %></p>
 
-<%= link_to 'Home', root_path %>
+<h4>Comment</h4>
+
+<% @article.comments.each do |comment| %>
+  <p>
+    <strong>Commenter:</strong>
+    <%= comment.commenter %>
+  </p>
+
+  <p>
+    <strong>Comment:</strong>
+    <%= comment.body %>
+  </p>
+<% end %>
+
+<h4>Add a comment</h4>
+<%= form_for ([@article, @article.comments.build]) do |f| %>
+<div class="row">
+  <div class="small-5">
+    <%= f.label :commenter %>
+    <%= f.text_field :commenter %>
+  </div>
+
+  <div class="small-5">
+    <%= f.label :body %>
+    <%= f.text_area :body %>
+  </div>
+
+  <div class="small-5">
+    <%= f.submit %>
+  </div>
+</div>
+
+<% end %>
+
+<%= link_to 'Back', articles_path(@article) %> |
+<%= link_to 'Edit', edit_article_path(@article) %>
