--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,38 +7,10 @@
 <p><%= @article.text %></p>
 
 <h4>Comment</h4>
-
-<% @article.comments.each do |comment| %>
-  <p>
-    <strong>Commenter:</strong>
-    <%= comment.commenter %>
-  </p>
-
-  <p>
-    <strong>Comment:</strong>
-    <%= comment.body %>
-  </p>
-<% end %>
+<%= render @article.comments %>
 
 <h4>Add a comment</h4>
-<%= form_for ([@article, @article.comments.build]) do |f| %>
-<div class="row">
-  <div class="small-5">
-    <%= f.label :commenter %>
-    <%= f.text_field :commenter %>
-  </div>
-
-  <div class="small-5">
-    <%= f.label :body %>
-    <%= f.text_area :body %>
-  </div>
-
-  <div class="small-5">
-    <%= f.submit %>
-  </div>
-</div>
-
-<% end %>
+<%= render 'comments/form' %>
 
 <%= link_to 'Back', articles_path(@article) %> |
 <%= link_to 'Edit', edit_article_path(@article) %>
